# mongofitness-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: steps.py
app/api/v1/: activities.py  steps.py
app/conf/: config.py
app/db/: __init__.py  database_manager.py  models.py  mongo_manager.py
tests/: test_activities.py  test_api.py  test_steps.py
